Fix icons spill out of bottom of layers palette

--- a/resources/css/chickenpaint.scss
+++ b/resources/css/chickenpaint.scss
@@ -1,4 +1,5 @@
 @import "font-awesome/_variables";
+@import "font-awesome/_mixins";
 
 @font-face {
     font-family: 'Font Awesome 5 Free';
@@ -38,6 +39,7 @@
 
     font-size: 14px;
 
+    $font-size-base: 0.9rem;
     @import "../../node_modules/bootstrap/scss/bootstrap";
 
     /*
@@ -543,7 +545,9 @@ body.chickenpaint-full-screen {
 .chickenpaint-palette-layers .chickenpaint-palette-body {
     display:flex;
     flex-direction:column;
-    height:100%;
+    flex-basis:0; /* Required for Firefox to shrink this element properly */
+    flex-grow:1;
+    flex-shrink:1;
 }
 .chickenpaint-palette-layers .chickenpaint-palette-body > * {
     flex-shrink:0;
